# Colored-Icon-Kit

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: build.yml  multi-platform.yml
resources/: changelog.md
src/: main.cpp
src/ColoredIconKit/: AprilFools.cpp  AprilFools.hpp  ColorManager.cpp  ColorManager.hpp  ModSettings.cpp  ModSettings.hpp
src/Settings/: Section.cpp  Section.hpp
src/UI/: ChangelogPopup.cpp  ChangelogPopup.hpp
src/UI/Popups/: Changelog.cpp  Changelog.hpp
src/Utils/: ColorManager.cpp  ColorManager.hpp  ModSettings.cpp  ModSettings.hpp  Utility.cpp  Utility.hpp
src/modify/: CharacterColorPage.cpp  GJGarageLayer.cpp
